# dfeqa

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
src/dfeqa/: __init__.py  __main__.py  cmdline.py  data_transformation.py  data_validation.py  datastructures.py  db.py  education_data.py  exceptions.py  summaries.py  template.env
src/dfeqa/commands/: __init__.py  addenv.py  create.py  createreport.py  version.py
src/dfeqa/templates/: census_data_quality.qmd  census_dq.qmd  data_quality.qmd  qa_report.qmd
tests/: conftest.py  test_create_chart.py  test_datastructures.py  test_frequency_counts.py  test_load_census.py  test_reporting.py  test_shell_command.py  test_validity.py
